--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 einops==0.8.1
+imbalanced-learn==0.12.4
 librosa==0.10.2.post1
 lightning==2.3.3
 matplotlib==3.7.2
@@ -13,8 +14,11 @@ scikit_learn==1.3.2
 scipy==1.10.1
 soundfile==0.12.1
 tensorboard==2.14.0
+timm==1.0.22
 torch==2.4.1
 torchaudio==2.4.1
 torchmetrics==1.5.2
 torchopenl3==1.0.1
+torchvision==0.19.1
 tqdm==4.67.1
+transformers==4.28.0
